@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: Object.3,v 1.6.4.7 2007/11/01 16:55:53 dgp Exp $
+'\" RCS: @(#) $Id: Object.3,v 1.6.4.8 2008/06/28 04:31:58 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_Obj 3 8.5 Tcl "Tcl Library Procedures"
@@ -102,10 +102,10 @@ reclaim an object's storage.
 .PP
 Tcl objects are typed.
 An object's internal representation is controlled by its type.
-Seven types are predefined in the Tcl core
+Several types are predefined in the Tcl core
 including integer, double, list, and bytecode.
 Extension writers can extend the set of types
-by using the procedure \fBTcl_RegisterObjType\fR .
+by defining their own \fBTcl_ObjType\fR structs.
 .SH "THE TCL_OBJ STRUCTURE"
 .PP
 Each Tcl object is represented by a \fBTcl_Obj\fR structure
